--- a/Jr.html
+++ b/Jr.html
@@ -26,6 +26,16 @@
     <input type="text" id="password" name="password">
 
     <br>
+    <h3>Dropdown</h3>
+
+    <label for="question">Security Question:</label>
+    <select name="question" id="question">
+    <option value="q1">What is your favourite childhood actor?</option>
+
+
+
+
+
     
 </form>
 
